- added: multipart/x-mixed-replace upload (https://github.com/petersirka/partial.js/tree/master/examples/live-streaming-upload)
- added: new test flag "mixed" for incommning multipart/x-mixed-replace content (https://github.com/petersirka/partial.js/tree/master/examples/live-streaming-upload)

- added: framework.fs.create.css(), framework.fs.create.js(), etc.
- added: framework.fs.rm.css(), framework.fs.rm.js(), etc.
- added: framework.fs alias to controller.fs
- added: framework.path.public(), framework.path.temp(), etc.
- added: framework.path alias to controller.path

- removed: framework.deleteCSS, framework.deleteJS, etc.
- removed: framework.createCSS, framework.createJS, etc.
- removed: framework.pathPublic, framework.pathTemp, etc.

- updated: framework.verification(), added new checking for write and read files

- clean code

======= 1.2.4-0

// HTML 5 features http://daker.me/2013/05/5-html5-features-you-need-to-know.html
- added: @{dns('//fonts.googleapis.com', '//google-analytics.com')}
- added: @{prefetch('http://daker.me/2013/05/hello-world.html')}
- added: @{prerender('http://daker.me/2013/05/hello-world.html')}
- added: @{head('//ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js')} and @{head}

// http://googlewebmastercentral.blogspot.sk/2011/09/pagination-with-relnext-and-relprev.html
- added: @{next('/page/3/')}
- added: @{prev('/page/1/')}

// http://googlewebmastercentral.blogspot.sk/2009/02/specify-your-canonical.html
- added: @{canonical('/original/12345-product/')}

- added: new example: https://github.com/petersirka/partial.js/tree/master/examples/views-head
- added: @{title}, @{description}, @{keywords}

// http://www.partialjs.com/documentation/views/
- updated: @{text}, @{hidden}, @{checkbox}, @{radio}, @{textarea}

- updated: @{image('url', { width: 200, height: 200, class: 'CLASS' })} or @{image('url', 200, 200, 'ALT', 'CLASS')}
- updated: auto CSS vendor prefixes
- updated: websocket - client.close() - removed @status
