@@ -26,3 +26,4 @@
 #template-toggle@{templateToggle(false, 'more', [])}#
 #routejs-@{routeJS('p.js')}#
 #@{head}#
+#@{download('test.pdf', 'content', 'test')}#
