@@ -5,6 +5,8 @@ IN DEVELOPMENT ======= 1.2.4-1
 - added: multipart/x-mixed-replace upload (https://github.com/petersirka/partial.js/tree/master/examples/live-streaming-upload)
 - added: new test flag "mixed" for incommning multipart/x-mixed-replace content (https://github.com/petersirka/partial.js/tree/master/examples/live-streaming-upload)
 
+- added: new view tag @{download(filename, [downloadName])}
+
 - added: framework.fs.create.css(), framework.fs.create.js(), etc.
 - added: framework.fs.rm.css(), framework.fs.rm.js(), etc.
 - added: framework.fs alias to controller.fs
@@ -16,6 +18,8 @@ IN DEVELOPMENT ======= 1.2.4-1
 - removed: framework.pathPublic, framework.pathTemp, etc.
 
 - updated: framework.verification(), added new checking for write and read files
+
+- fixed: controller.cancel()
 
 - clean code
 
